JAVASCRIPT: Added function to add post

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="form-group">
             <label for="addPost">Add Post</label>
             <textarea class="form-control" id="addPost" rows="3"></textarea>
-            <button class="btn btn-primary" id="addPostBtn">Add Post</button>
+            <button class="btn bg-main-gradient" id="addPostBtn">Add Post</button>
           </div>
         </form>
     </div>
