JAVASCRIPT: Added function to display all posts

--- a/index.html
+++ b/index.html
@@ -37,20 +37,52 @@
                 </li>
               </ul>
               <div>
-                  <img class="circular-pic mx-2" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="" width="40" height="40">
+                  <img class="circular-pic mx-2" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
               </div>
             </div>
         </nav>
 
-        <form>
-          <div class="form-group">
-            <label for="addPost">Add Post</label>
-            <textarea class="form-control" id="addPost" rows="3"></textarea>
-            <button class="btn bg-main-gradient" id="addPostBtn">Add Post</button>
+      </div>
+
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-12 col-md-9 py-5">
+            <form>
+              <div class="form-group d-flex flex-row">
+                <img class="circular-pic mx-2" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
+                <textarea class="form-control flex-fill" id="addPost" rows="1" placeholder="What's up?"></textarea>
+                <button class="btn bg-main-gradient ml-3 btn-height" id="addPostBtn">Add Post</button>
+              </div>
+            </form>
+            <div id="postsDiv">
+              <div class="card my-2">
+                <div class="card-body">
+                  This is some text within a card body.
+                </div>
+              </div>
+              <div class="card my-2">
+                <div class="card-body">
+                  This is some text within a card body.
+                </div>
+              </div>
+            </div>
           </div>
-        </form>
-    </div>
-    
+
+          <div class="col-12 col-md-3">
+            <div class="card">
+              <div class="card-body">
+                This is some text within a card body.
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                This is some text within a card body.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
