MODIFICATION: modified post page look again

--- a/post.html
+++ b/post.html
@@ -26,9 +26,18 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <small class="text-muted"> <span class="like">&hearts;</span> 3 min ago</small>
+                        <small class="text-muted"> <span class="like">LIKE</span><span class="delete">DEL</span> 3 min ago</small>
+                        <div class="text-muted p-0 reply">REPLY</div>
                     </div>
                 </div>
+            </div>
+            <div class="reply-text sr-only">
+                <form>
+                    <div class="form-group">
+                      <textarea class="form-control" id="addPost" rows="3"></textarea>
+                      <button class="btn bg-main-gradient" id="addPostBtn">Reply</button>
+                    </div>
+                </form>
             </div>
             <ul class="list-group list-group-flush comments-main pl-5">
                 <li class="list-group-item comment flex d-flex justify-content-start">
@@ -38,7 +47,7 @@
                     <div>
                         <b>Arjun K Prasad</b>
                         <p>Cras justo odio</p>
-                        <small class="text-muted"> <span class="like">&hearts;</span> 3 min ago</small>
+                        <small class="text-muted">3 min ago</small>
                     </div>
                 </li>
                 <li class="list-group-item comment flex d-flex justify-content-start">
@@ -48,7 +57,7 @@
                     <div>
                         <b>Arjun K Prasad</b>
                         <p>Cras justo odio</p>
-                        <small class="text-muted"> <span class="like">&hearts;</span> 3 min ago</small>
+                        <small class="text-muted"> 3 min ago</small>
                     </div>
                 </li>
                 <li class="list-group-item comment flex d-flex justify-content-start">
@@ -58,7 +67,7 @@
                     <div>
                         <b>Arjun K Prasad</b>
                         <p>Cras justo odio</p>
-                        <small class="text-muted"> <span class="like">&hearts;</span> 3 min ago</small>
+                        <small class="text-muted"> 3 min ago</small>
                     </div>
                 </li>
             </ul>
