STYLING: Post on landing page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Gupshup</title>
 </head>
 <body>
@@ -62,20 +63,34 @@
               </div>
             </form>
             <div id="postsDiv">
-              <div class="card my-2">
+  
+              <div class="card my-2 border-0">
                 <div class="card-body">
-                  This is some text within a card body.
-                </div>
-              </div>
-              <div class="card my-2">
-                <div class="card-body">
-                  This is some text within a card body.
-                </div>
-              </div>
-            </div>
-          </div>
+                <div class="row ml-0 d-flex flex-row">
+                    <div>
+                      <img class="circular-pic mx-2" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
+                    </div>
+                    <div>
+                      <h6 class="m-0">Arjun</h6>
+                      <div><small> 15h</small></div>
+                    </div>
+                  </div>
+                    <div class="m-2">
+                      <p> This is some text within a card body.</p>
+                      <hr>
+                      <div class="d-flex justify-content-between">
+                        <div><i class="fa fa-heart-o" aria-hidden="true"></i> 2</div>
+                        <div><i class="fa fa-comment-o" aria-hidden="true"></i> 1</div>
+                        <div><i class="fa fa-trash-o" aria-hidden="true"></i></div>
+                      </div>
 
-          <div class="col-12 col-md-3  py-5 adv-handler">
+
+                    </div>
+                </div>
+              </div>
+
+
+          <div class="col-12 col-md-3  py-5 adv-handler sr-only">
             <div class="card">
               <div class="card-body">
                 This is some text within a card body.
