MODIFIED: displayPosts function in index.js

--- a/index.html
+++ b/index.html
@@ -64,30 +64,8 @@
             </form>
             <div id="postsDiv">
   
-              <div class="card my-2 border-0">
-                <div class="card-body">
-                <div class="row ml-0 d-flex flex-row">
-                    <div>
-                      <img class="circular-pic mx-2" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
-                    </div>
-                    <div>
-                      <h6 class="m-0">Arjun</h6>
-                      <div><small> 15h</small></div>
-                    </div>
-                  </div>
-                    <div class="m-2">
-                      <p> This is some text within a card body.</p>
-                      <hr>
-                      <div class="d-flex justify-content-between">
-                        <div><i class="fa fa-heart-o" aria-hidden="true"></i> 2</div>
-                        <div><i class="fa fa-comment-o" aria-hidden="true"></i> 1</div>
-                        <div><i class="fa fa-trash-o" aria-hidden="true"></i></div>
-                      </div>
-
-
-                    </div>
-                </div>
-              </div>
+              
+            </div>
 
 
           <div class="col-12 col-md-3  py-5 adv-handler sr-only">
@@ -128,6 +106,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment-with-locales.min.js"></script>
     <script type="module" src="./scripts/common.js"></script>
     <script type="module" src="./scripts/models.js"></script>
     <script type="module" src="./scripts/index.js"></script>
