--- a/post.html
+++ b/post.html
@@ -18,7 +18,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-main-gradient fixed-top">
 
-            <a class="navbar-brand title-head text-light" href="#">Gupshup</a>
+            <a class="navbar-brand title-head text-light" href="index.html">Gupshup</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
