SCREENSHOTS: Added screenshots for readme.md

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </li>
             </ul>
             <div>
-                <img class="circular-pic mx-2 userAvatar" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
+                <img class="circular-pic mx-2 userAvatar" src="https://via.placeholder.com/150" alt="">
             </div>
           </div>
       </nav>
@@ -57,7 +57,7 @@
             <form>
               <div class="form-group d-flex flex-column flex-md-row">
                 <div>
-                  <img class="circular-pic mx-2 userAvatar" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
+                  <img class="circular-pic mx-2 userAvatar" src="https://via.placeholder.com/150" alt="">
                 </div>                
                 <textarea class="form-control flex-fill" id="addPost" rows="1" placeholder="What's up?"></textarea>
                 <button class="btn bg-main-gradient ml-md-3 btn-height" id="addPostBtn">Add Post</button>
