--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </li>
             </ul>
             <div>
-                <img class="circular-pic mx-2 userAvatar" src="https://via.placeholder.com/150" alt="">
+                <img class="circular-pic mx-2 userAvatar" src="https://via.placeholder.com/150" alt="" width="40" height="40">
             </div>
           </div>
       </nav>
@@ -54,10 +54,106 @@
       <div class="container my-5">
         <div class="row">
           <div class="col-12 col-md-9 py-5">
+
+            <div id="story" class="d-flex flex-row mb-5 .card border-0">
+              <div class=".card-body m-0 p-2">
+                <img class="circular-pic mx-2 border click-handler" width="60" height="60" src="https://avatars0.githubusercontent.com/u/47210224?s=460&u=f878de944246996cf5b8d85bf82e93c224ecc657&v=4" data-toggle="modal" data-target="#story1">
+                <!-- Modal -->
+                <div class="modal fade" id="story1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                      <h5 class="modal-title userName" id="exampleModalLabel">Arjun</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                      </div>
+                      <div class="modal-body">
+
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                          <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                          </ol>
+                          <div class="carousel-inner" style="height:500px;">
+                            <div class="carousel-item active">
+                              <img src="https://images.unsplash.com/flagged/photo-1551363486-ce59042b91ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="https://images.unsplash.com/photo-1540946646613-e038c58270fb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="https://images.unsplash.com/photo-1587840238243-fdb9865898b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
+                            </div>
+                          </div>
+                          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
+
+                      </div>
+                  </div>
+                  </div>
+                </div>
+
+                <img class="circular-pic mx-2 border click-handler" width="60" height="60" src="https://avatars1.githubusercontent.com/u/18505592?s=460&u=114f93be5cd15791beb321809c6b4c07b13a6bcd&v=4" data-toggle="modal" data-target="#story2">
+                <!-- Modal -->
+                <div class="modal fade" id="story2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Arjun</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                      </div>
+                      <div class="modal-body">
+
+                        <div id="story2indicators" class="carousel slide" data-ride="carousel">
+                          <ol class="carousel-indicators">
+                            <li data-target="#story2indicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#story2indicators" data-slide-to="1"></li>
+                            <li data-target="#story2indicators" data-slide-to="2"></li>
+                          </ol>
+                          <div class="carousel-inner" style="height:500px;">
+                            <div class="carousel-item active">
+                              <img src="https://images.unsplash.com/flagged/photo-1551363486-ce59042b91ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="https://images.unsplash.com/photo-1540946646613-e038c58270fb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="https://images.unsplash.com/photo-1587840238243-fdb9865898b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
+                            </div>
+                          </div>
+                          <a class="carousel-control-prev" href="#story2indicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#story2indicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
+
+                      </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
             <form>
               <div class="form-group d-flex flex-column flex-md-row">
                 <div>
-                  <img class="circular-pic mx-2 userAvatar" src="https://via.placeholder.com/150" alt="">
+                  <img class="circular-pic mx-2 userAvatar" width="40" height="40" src="https://via.placeholder.com/150" alt="">
                 </div>                
                 <textarea class="form-control flex-fill" id="addPost" rows="1" placeholder="What's up?"></textarea>
                 <button class="btn bg-main-gradient ml-md-3 btn-height" id="addPostBtn">Add Post</button>
