--- a/post.html
+++ b/post.html
@@ -17,7 +17,7 @@
     <div class="container-fluid p-0">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-main-gradient fixed-top">
-
+  
             <a class="navbar-brand title-head text-light" href="index.html">Gupshup</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -44,13 +44,13 @@
                 </li>
               </ul>
               <div>
-                  <img class="circular-pic mx-2 userAvatar" src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="">
+                  <img class="circular-pic mx-2 userAvatar" src="https://via.placeholder.com/150" alt="" width="40" height="40">
               </div>
             </div>
         </nav>
-
+  
       </div>
-
+  
       <div class="container my-5">
         <div class="row">
           <div class="col-12 col-md-9 py-5">
