Naming in stories

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <div class="modal-dialog">
                   <div class="modal-content">
                       <div class="modal-header">
-                      <h5 class="modal-title userName" id="exampleModalLabel">Arjun</h5>
+                      <h5 class="modal-title" id="exampleModalLabel">Aayushi</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                       </button>
@@ -77,13 +77,13 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                           </ol>
                           <div class="carousel-inner" style="height:500px;">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active" data-interval="500">
                               <img src="https://images.unsplash.com/flagged/photo-1551363486-ce59042b91ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item"  data-interval="500">
                               <img src="https://images.unsplash.com/photo-1540946646613-e038c58270fb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item"  data-interval="500">
                               <img src="https://images.unsplash.com/photo-1587840238243-fdb9865898b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
                             </div>
                           </div>
@@ -122,13 +122,13 @@
                             <li data-target="#story2indicators" data-slide-to="2"></li>
                           </ol>
                           <div class="carousel-inner" style="height:500px;">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active"  data-interval="500">
                               <img src="https://images.unsplash.com/flagged/photo-1551363486-ce59042b91ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-interval="500">
                               <img src="https://images.unsplash.com/photo-1540946646613-e038c58270fb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item" data-interval="500">
                               <img src="https://images.unsplash.com/photo-1587840238243-fdb9865898b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="...">
                             </div>
                           </div>
